# dota_split_cc

./: .gitignore  CMakeLists.txt  README.md
include/: box_type.h  dota_utils.h  loguru.hpp  path_utils.hpp  poly_iou.hpp  split_utils.h  string_utils.hpp  threadpool.hpp
split_configs/: ms_train.json  ss_test.json  ss_train.json  ss_val.json  ss_val_dota.json
src/: dota_utils.cc  loguru.cc  main.cc  split_utils.cc
